# tts-speaker

./: .gitignore  README.md  interactive_tts.py  pyproject.toml
