[project]
name = "tts-speaker"
version = "0.1.0"
description = "基于 Piper 的中文交互式语音生成命令行工具。"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "g2pw>=0.1.1",
    "piper-tts>=1.4.2",
    "requests>=2.33.1",
    "sentence-stream>=1.3.0",
    "torch>=2.11.0",
    "unicode-rbnf>=2.4.0",
]

[dependency-groups]
dev = []
